Add Show model and play with Faraday requests

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,15 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+# Ignore redis dump DB
+dump.rdb
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+
 
 # Ignore Byebug command history file.
 .byebug_history
