--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "private": true,
   "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-relay": "dev"
+  },
+  "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "^6.24.1",
-    "lodash": "^4.14.2",
-    "react": "^15.5.4",
-    "react-apollo": "^1.1.0",
-    "react-dom": "^15.5.4"
+    "babel-plugin-relay": "dev",
+    "relay-compiler": "dev"
+  },
+  "scripts": {
+    "convert": "babel-node ./app/assets/javascripts/scripts/schema_converter",
+    "relay": "relay-compiler --src ./app/assets/javascripts --schema ./app/graphql/schema.graphql"
   }
 }
