--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "private": true,
   "dependencies": {
+    "babel-core": "^6.13.2",
+    "babel-plugin-relay": "dev",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "^6.24.1",
+    "graphql": "^0.9.3",
+    "graphql-relay": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-relay": "dev"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-plugin-relay": "dev",
     "relay-compiler": "dev"
   },
   "scripts": {
     "convert": "babel-node ./app/assets/javascripts/scripts/schema_converter",
-    "relay": "relay-compiler --src ./app/assets/javascripts --schema ./app/graphql/schema.graphql"
+    "relay": "relay-compiler --src ./app/assets/javascripts --schema ./app/graphql/schema.graphql --watch"
   }
 }
